# phrasemachine

./: .gitignore  README.md  README.rst  config.py  pfgen.py  pfgen.sublime-project  pfgui.py  requirements.txt  settings.json  setup.cfg
phrasemachine/: pfcli.py  pfgen.py  pfgui.py
