[metadata]
name = passphrasemachine
author = Michael Van Wickle
author-email = mvanwickle@gmail.com
summary = A CLI and GUI for passphrase generation
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/mvwicky/passphrasemachine
license = MIT
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Security
    Topic :: Utilities
keywords =
    passphrase
    security
    login

[files]
packages = passphrasemachine

[entry_points]
console_scripts =
    pfgen = phrasemachine.pfcli:main
gui_scripts =
    pfgui = phrasemachine.pfgui:main
